# Mylib

./: .gitignore  README.md
Template/C/: Makefile  test
Template/C/src/: Pub_Func.h  Thread_Manager.cpp  Thread_Manager.h  main.c
Template/C/src/modules/: Makefile
Template/ESP32/: Pub_Func.h  Thread_Manager.c  Thread_Manager.h  Web_Server.c  Web_Server.h
Template/golang/: Makefile  README.md  config_debug.json  config_debug.yaml  config_prod.json  config_prod.yaml  go.mod  go.sum  init_project.sh  install.sh  test.service
Template/golang/src/: Timer_Manager.go  cachesql_manager.go  env.go  example_cachesql.go  example_gorm.go  example_json.go  example_redis.go  example_route.go  example_timer.go  gorm_manager.go  htpp_manager.go  json_type.go  main.go  public_func.go  redis_server.go  route_manager.go
Template/golang/src/app/: app.go
Template/golang/src/dev_test_core/: main.go.dev
Template/golang/src/example/: cert.pem  example_app.go  example_base_struct.go  example_bignum.go  example_cachesql.go  example_exec_manager.go  example_file.go  example_gorm.go  example_httpc.go  example_json.go  (+13 more)
Template/rust/: Cargo.toml  Makefile  README.md  rustfmt.toml
Template/rust/dynamic_code/: Cargo.toml
Template/rust/exsamples/: Cargo.toml
Template/rust/exsamples/src/: dynamic_code_test.rs  main.rs  public_test.rs  test_http.rs  test_route_ws_client.rs  test_thread.rs  thread_manager_test.rs
Template/rust/http_manager/: Cargo.toml
Template/rust/http_manager/src/: lib.rs
Template/rust/main/: Cargo.toml
Template/rust/main_wasm/: Cargo.toml
Template/rust/main_wasm/src/: lib.rs
Template/rust/public/: Cargo.toml
Template/rust/route_websocket_client/: Cargo.toml
Template/rust/thread_manager/: Cargo.toml
Template/rust/thread_manager/src/: lib.rs
Template/rust/wasm_thread_manager/: Cargo.toml
Template/rust/wasm_websocket_client/: Cargo.toml  README.md
(+55 files in other folders)
