[package]
name = "http_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.141"

# Native only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = "0.12.22"

# WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
