[package]
name = "main_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
public = { path = "../public" }
dynamic_code = { path = "../dynamic_code"}
wasm_websocket_client = { path = "../wasm_websocket_client"}
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
  "BinaryType",
  "Window",
  "console"
] }
wasm_thread_manager = { path = "../wasm_thread_manager"}
serde = "1.0.219"
once_cell = "1.21.3"

[lib]
crate-type = ["cdylib"]
